# launchkey-lightshow

./: Makefile  drawing-board.py  launchkey.py  pyproject.toml  running-lights.py  whack-a-mole.py
