[tool.poetry]
name = "launchkey-lightshow"
version = "0.1.0"
description = ""
authors = ["Phoomparin Mano <phoomparin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-rtmidi = "^1.4.0"
mido = "^1.2.9"
playsound = "^1.2.2"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
